add basic web content

--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I love Sophia Wen</p>
-</body>
+	<body>
+		<h1>Hello World</h1>
+		<h2>I love Sophia Wen</h2>
+		<p>Why? Because</p>
+			<ul>
+				<li>She is strong</li>
+				<li>She is smart</li>
+				<li>She is beautiful</li>
+				<li>She is caring</li>
+			</ul>
+	</body>
 </html>
